Handle empty string in string calculator

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>fizzbuzz</module>
         <module>stringsum</module>
+        <module>stringcalculator</module>
     </modules>
     <packaging>pom</packaging>
     <dependencies>
